# cudalice

./: .clang-format  .gitignore  CMakeLists.txt  run.sh
cuda/: math_functions.cu  math_functions.h
cudalice/: CMakeLists.txt  Targets.cmake  common.cpp  common.h  cuda.cmake  glog.cmake  math_functions.h  math_functions_test.cpp
src/: CMakeLists.txt  Targets.cmake
src/caffe/: common.cpp  common.h  math_functions.cpp  math_functions.h  math_functions_test.cpp
src/caffe/utils/: device_alternate.h
src/cudalice/utils/: non_copyable.h  timer.h  utils.h
src/tiny-cuda-nn/: common_host.h  gpu_memory.h  gpu_memory_test.cpp
